[metadata]
name = youtubeblocker
version = 0.0.18
author = Aaron Hoffer
author_email = github@hoffer.org
description = Application for Raspberry PI and its GPIO.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ahoffer/led
project_urls =
    Bug Tracker = https://github.com/ahoffer/led/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .